# tf2caffe

./: README.md  data_mod.py  list.txt  out_data.py  seg_layers.py  ss.sh
cmake_read/: CMakeLists.txt  pt.cpp
cmake_write/: CMakeLists.txt  wm.cpp
